# aisr

./: config.yaml  create_dir.py  main.py  pyproject.toml
aisr/: __init__.py  aisr_project_summary.txt  aisr_project_summary2.txt  generate_summary.py
aisr/agents/: __init__.py  answer.py  answer_plan.py  base.py  insight.py  search_plan.py  sub_answer.py  task_plan.py
aisr/core/: __init__.py  base.py  llm_provider.py  llm_provider_fuza.py1  router.py
aisr/memory/: __init__.py  agent_memory.py  base.py  global_memory.py  manager.py  workflow_memory.py
aisr/tools/: __init__.py  base.py  search_tools.py
aisr/utils/: config.py  logging.py  logging_utils.py
aisr/workflows/: __init__.py  base.py  research.py  research.py1  search_planning.py  search_sub_answer_executing.py1  simple_workflow.py  sub_answer.py  task_executing_search_planning.py  task_planning.py
design/: aisr.puml  read.txt  summary2.txt
tests/: __init__.py  test_answer_agent.py  test_answer_plan_agent.py  test_insight_agent.py  test_llm_provider.py  test_main_workflow.py  test_search_plan_agent.py  test_search_tools.py  test_sub_answer_agent.py  test_task_plan_agent.py
