[project]
name = "my-deep-research"
version = "0.1.0"
description = "Deep Research Assistant - a multi-agent RAG system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "colorama>=0.4.6",
    "colorlog>=6.9.0",
    "coverage>=7.6.12",
    "google-search-results>=2.4.2",
    "langchain-community>=0.3.19",
    "openai>=1.65.5",
    "requests>=2.32.3",
    "requests-mock==1.11.0",
    "ruff>=0.9.10",
    "serpapi>=0.1.5",
    "setuptools>=76.0.0",
]
